--- a/examples/react/package.json
+++ b/examples/react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "project-sandwich-react-example",
+  "name": "live-cache-react-example",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,7 +10,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "project-sandwich": "file:../.."
+    "live-cache": "file:../.."
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
@@ -19,4 +19,3 @@
     "vite": "^5.0.8"
   }
 }
-
