--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "live-cache",
-  "version": "0.1.0",
+  "version": "0.2.1",
   "description": "A client-side cache + controller library for stateful resources",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Subhrajyotimodak/live-cache"
+  },
   "main": "dist/index.cjs",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
