Refactor project structure to support workspaces, rename package to "live-cache-workspace", and update build scripts for multi-package publishing. Remove legacy Rollup configuration and core files, and enhance TypeScript paths for improved module resolution. Update example React application to utilize new package structure and imports.

--- a/examples/react/tsconfig.json
+++ b/examples/react/tsconfig.json
@@ -12,8 +12,10 @@
     "useDefineForClassFields": false,
     "baseUrl": ".",
     "paths": {
-      "live-cache": ["../../src/index.ts"],
-      "live-cache/*": ["../../src/*"]
+      "@live-cache/core": ["../../library/core/src/index.ts"],
+      "@live-cache/react": ["../../library/react/src/index.ts"],
+      "@live-cache/storage-manager": ["../../library/storage-manager/src/index.ts"],
+      "@live-cache/invalidator": ["../../library/invalidator/src/index.ts"]
     }
   },
   "include": ["src"]
