--- a/examples/react/package.json
+++ b/examples/react/package.json
@@ -10,7 +10,10 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "live-cache": "file:../.."
+    "@live-cache/core": "workspace:*",
+    "@live-cache/invalidator": "workspace:*",
+    "@live-cache/react": "workspace:*",
+    "@live-cache/storage-manager": "workspace:*"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
