Update package versions to 0.0.1 across all libraries, rename main package to "live-cache-workspace", and adjust dependencies in example projects to reflect new versioning. Enhance package.json files with repository and homepage information for better project visibility.

--- a/examples/react/package.json
+++ b/examples/react/package.json
@@ -10,10 +10,10 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@live-cache/core": "workspace:*",
-    "@live-cache/invalidator": "workspace:*",
-    "@live-cache/react": "workspace:*",
-    "@live-cache/storage-manager": "workspace:*"
+    "@live-cache/core": "0.0.1",
+    "@live-cache/invalidator": "0.0.1",
+    "@live-cache/react": "0.0.1",
+    "@live-cache/storage-manager": "0.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
